syntax = "proto3";

package grpc_cluster.service.rpc.auth;

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}
